# Transformer-CUDA-Kernels

./: CMakeLists.txt
include/base/: common.cuh
include/cuda_kernels/: add.cuh  elementwise_add.cuh  sum.cuh
include/kernel_samples/base/: basic_cuda.cuh  common.cuh  error.cuh  execution_config.cuh  general.cuh
include/kernel_samples/elementwise/: add.cuh  elementwise_add.cuh  gelu.cuh
include/kernel_samples/reduce/: sum.cuh
test/: CMakeLists.txt  test_basic_cuda.cu  test_main.cpp
test/test_base/: test_basic_cuda.cu  test_common.cu  test_execution_config.cu
test/test_cuda_kernels/: test_add.cu  test_add_output.md  test_sum.cu  test_sum_output.md
test/test_elementwise/: test_add.cu  test_elementwise_add.cu  test_gelu.cu
test/test_reduce/: test_sum.cu
test/test_transformer_ops/: test_libtorch.cu
